<resources>
    <string name="app_name">AndroidMVP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="show_notes">Show my notes</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>

</resources>
